adding watch task

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp-traceur": "^0.7.0"
   },
   "scripts": {
-    "gulp": "gulp"
+    "gulp":       "gulp",
+    "gulp-watch": "gulp watch"
   }
 }
